parser/parser.output
Terminals unused in grammar

    DESC


State 152 conflicts: 1 shift/reduce


Grammar

    0 $accept: program $end

    1 program: %empty
    2        | stmt program

    3 stmt: sysStmt ';'
    4     | dbStmt ';'
    5     | tbStmt ';'
    6     | idxStmt ';'
    7     | alterStmt ';'
    8     | QUIT

    9 sysStmt: SHOW DATABASES
   10        | SHOW DATABASE dbName

   11 dbStmt: CREATE DATABASE dbName
   12       | DROP DATABASE dbName
   13       | USE dbName
   14       | CLOSE
   15       | SHOW TABLE tbName
   16       | SHOW TABLES

   17 tbStmt: CREATE TABLE tbName '(' fieldList ',' keyConstraints ')'
   18       | CREATE TABLE tbName '(' fieldList ')'
   19       | DROP TABLE tbName
   20       | SELECT selector FROM tableList WHERE whereClause
   21       | INSERT INTO tbName VALUES valueLists
   22       | DELETE FROM tbName WHERE whereClause
   23       | UPDATE tbName SET setClause

   24 setClause: columnName '=' value
   25          | setClause ',' columnName '=' value

   26 valueLists: '(' valueList ')'
   27           | valueLists ',' '(' valueList ')'

   28 valueList: value
   29          | valueList ',' value

   30 selector: '*'
   31         | cols

   32 cols: col
   33     | cols ',' col

   34 col: columnName
   35    | tbName '.' columnName

   36 tableList: tbName
   37          | tableList ',' tbName

   38 whereClause: col op expr
   39            | col IS VALUE_NULL
   40            | col IS NOT VALUE_NULL
   41            | whereClause AND whereClause

   42 op: '='
   43   | LEX_GE
   44   | LEX_LE
   45   | LEX_NE
   46   | '>'
   47   | '<'

   48 expr: col
   49     | value

   50 keyConstraints: keyConstrint
   51               | keyConstraints ',' keyConstrint

   52 keyConstrint: PRIMARY '(' columnList ')'
   53             | FOREIGN fkName '(' columnList ')' REFERENCES tbName '(' columnList ')'

   54 idxStmt: CREATE INDEX idxName ON tbName '(' columnList ')'
   55        | DROP INDEX idxName

   56 alterStmt: ALTER TABLE tbName ADD PRIMARY '(' columnList ')'
   57          | ALTER TABLE tbName DROP PRIMARY
   58          | ALTER TABLE tbName ADD CONSTRAINT fkName FOREIGN '(' columnList ')' REFERENCES tbName '(' columnList ')'
   59          | ALTER TABLE tbName DROP FOREIGN fkName
   60          | ALTER TABLE tbName ADD columnName field
   61          | ALTER TABLE tbName DROP columnName
   62          | ALTER TABLE tbName CHANGE columnName field

   63 fieldList: field
   64          | fieldList ',' field

   65 field: columnName type
   66      | columnName type NOTNULL
   67      | columnName type DEFAULT value
   68      | columnName type NOTNULL DEFAULT value

   69 type: T_INT
   70     | VARCHAR '(' VALUE_INT ')'
   71     | T_FLOAT

   72 value: VALUE_INT
   73      | VALUE_STRING
   74      | VALUE_FLOAT
   75      | VALUE_NULL

   76 columnList: columnName
   77           | columnList ',' columnName

   78 dbName: IDENTIFIER

   79 tbName: IDENTIFIER

   80 columnName: IDENTIFIER

   81 fkName: IDENTIFIER

   82 idxName: IDENTIFIER


Terminals, with rules where they appear

    $end (0) 0
    '(' (40) 17 18 26 27 52 53 54 56 58 70
    ')' (41) 17 18 26 27 52 53 54 56 58 70
    '*' (42) 30
    ',' (44) 17 25 27 29 33 37 51 64 77
    '.' (46) 35
    ';' (59) 3 4 5 6 7
    '<' (60) 47
    '=' (61) 24 25 42
    '>' (62) 46
    error (256)
    QUIT (258) 8
    CREATE (259) 11 17 18 54
    DROP (260) 12 19 55 57 59 61
    USE (261) 13
    SHOW (262) 9 10 15 16
    TABLES (263) 16
    DESC (264)
    ADD (265) 56 58 60
    CHANGE (266) 62
    ALTER (267) 56 57 58 59 60 61 62
    CLOSE (268) 14
    DATABASES (269) 9
    DATABASE (270) 10 11 12
    TABLE (271) 15 17 18 19 56 57 58 59 60 61 62
    INDEX (272) 54 55
    ON (273) 54
    CONSTRAINT (274) 58
    SELECT (275) 20
    FROM (276) 20 22
    WHERE (277) 20 22
    IS (278) 39 40
    NOT (279) 40
    AND (280) 41
    LEX_GE (281) 43
    LEX_LE (282) 44
    LEX_NE (283) 45
    INSERT (284) 21
    INTO (285) 21
    VALUES (286) 21
    DELETE (287) 22
    SET (288) 23
    UPDATE (289) 23
    T_INT (290) 69
    T_FLOAT (291) 71
    VARCHAR (292) 70
    PRIMARY (293) 52 56 57
    FOREIGN (294) 53 58 59
    REFERENCES (295) 53 58
    NOTNULL (296) 66 68
    DEFAULT (297) 67 68
    VALUE_INT <ivalue> (298) 70 72
    VALUE_FLOAT <fvalue> (299) 74
    VALUE_STRING <string> (300) 73
    IDENTIFIER <string> (301) 78 79 80 81 82
    VALUE_NULL <string> (302) 39 40 75


Nonterminals, with rules where they appear

    $accept (57)
        on left: 0
    program (58)
        on left: 1 2
        on right: 0 2
    stmt <tree> (59)
        on left: 3 4 5 6 7 8
        on right: 2
    sysStmt <tree> (60)
        on left: 9 10
        on right: 3
    dbStmt <tree> (61)
        on left: 11 12 13 14 15 16
        on right: 4
    tbStmt <tree> (62)
        on left: 17 18 19 20 21 22 23
        on right: 5
    setClause (63)
        on left: 24 25
        on right: 23 25
    valueLists <valueliststree> (64)
        on left: 26 27
        on right: 21 27
    valueList <valuelisttree> (65)
        on left: 28 29
        on right: 26 27 29
    selector (66)
        on left: 30 31
        on right: 20
    cols (67)
        on left: 32 33
        on right: 31 33
    col <my_col> (68)
        on left: 34 35
        on right: 32 33 38 39 40 48
    tableList (69)
        on left: 36 37
        on right: 20 37
    whereClause <whereclause> (70)
        on left: 38 39 40 41
        on right: 20 22 41
    op <compop> (71)
        on left: 42 43 44 45 46 47
        on right: 38
    expr <my_expr> (72)
        on left: 48 49
        on right: 38
    keyConstraints <consList> (73)
        on left: 50 51
        on right: 17 51
    keyConstrint <cons> (74)
        on left: 52 53
        on right: 50 51
    idxStmt <tree> (75)
        on left: 54 55
        on right: 6
    alterStmt <tree> (76)
        on left: 56 57 58 59 60 61 62
        on right: 7
    fieldList <fieldList> (77)
        on left: 63 64
        on right: 17 18 64
    field <field> (78)
        on left: 65 66 67 68
        on right: 60 62 63 64
    type <type> (79)
        on left: 69 70 71
        on right: 65 66 67 68
    value <my_value> (80)
        on left: 72 73 74 75
        on right: 24 25 28 29 49 67 68
    columnList <columnList> (81)
        on left: 76 77
        on right: 52 53 54 56 58 77
    dbName <string> (82)
        on left: 78
        on right: 10 11 12 13
    tbName <string> (83)
        on left: 79
        on right: 15 17 18 19 21 22 23 35 36 37 53 54 56 57 58 59 60 61 62
    columnName <string> (84)
        on left: 80
        on right: 24 25 34 35 60 61 62 65 66 67 68 76 77
    fkName <string> (85)
        on left: 81
        on right: 53 58 59
    idxName <string> (86)
        on left: 82
        on right: 54 55


State 0

    0 $accept: . program $end

    QUIT    shift, and go to state 1
    CREATE  shift, and go to state 2
    DROP    shift, and go to state 3
    USE     shift, and go to state 4
    SHOW    shift, and go to state 5
    ALTER   shift, and go to state 6
    CLOSE   shift, and go to state 7
    SELECT  shift, and go to state 8
    INSERT  shift, and go to state 9
    DELETE  shift, and go to state 10
    UPDATE  shift, and go to state 11

    $default  reduce using rule 1 (program)

    program    go to state 12
    stmt       go to state 13
    sysStmt    go to state 14
    dbStmt     go to state 15
    tbStmt     go to state 16
    idxStmt    go to state 17
    alterStmt  go to state 18


State 1

    8 stmt: QUIT .

    $default  reduce using rule 8 (stmt)


State 2

   11 dbStmt: CREATE . DATABASE dbName
   17 tbStmt: CREATE . TABLE tbName '(' fieldList ',' keyConstraints ')'
   18       | CREATE . TABLE tbName '(' fieldList ')'
   54 idxStmt: CREATE . INDEX idxName ON tbName '(' columnList ')'

    DATABASE  shift, and go to state 19
    TABLE     shift, and go to state 20
    INDEX     shift, and go to state 21


State 3

   12 dbStmt: DROP . DATABASE dbName
   19 tbStmt: DROP . TABLE tbName
   55 idxStmt: DROP . INDEX idxName

    DATABASE  shift, and go to state 22
    TABLE     shift, and go to state 23
    INDEX     shift, and go to state 24


State 4

   13 dbStmt: USE . dbName

    IDENTIFIER  shift, and go to state 25

    dbName  go to state 26


State 5

    9 sysStmt: SHOW . DATABASES
   10        | SHOW . DATABASE dbName
   15 dbStmt: SHOW . TABLE tbName
   16       | SHOW . TABLES

    TABLES     shift, and go to state 27
    DATABASES  shift, and go to state 28
    DATABASE   shift, and go to state 29
    TABLE      shift, and go to state 30


State 6

   56 alterStmt: ALTER . TABLE tbName ADD PRIMARY '(' columnList ')'
   57          | ALTER . TABLE tbName DROP PRIMARY
   58          | ALTER . TABLE tbName ADD CONSTRAINT fkName FOREIGN '(' columnList ')' REFERENCES tbName '(' columnList ')'
   59          | ALTER . TABLE tbName DROP FOREIGN fkName
   60          | ALTER . TABLE tbName ADD columnName field
   61          | ALTER . TABLE tbName DROP columnName
   62          | ALTER . TABLE tbName CHANGE columnName field

    TABLE  shift, and go to state 31


State 7

   14 dbStmt: CLOSE .

    $default  reduce using rule 14 (dbStmt)


State 8

   20 tbStmt: SELECT . selector FROM tableList WHERE whereClause

    IDENTIFIER  shift, and go to state 32
    '*'         shift, and go to state 33

    selector    go to state 34
    cols        go to state 35
    col         go to state 36
    tbName      go to state 37
    columnName  go to state 38


State 9

   21 tbStmt: INSERT . INTO tbName VALUES valueLists

    INTO  shift, and go to state 39


State 10

   22 tbStmt: DELETE . FROM tbName WHERE whereClause

    FROM  shift, and go to state 40


State 11

   23 tbStmt: UPDATE . tbName SET setClause

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 42


State 12

    0 $accept: program . $end

    $end  shift, and go to state 43


State 13

    2 program: stmt . program

    QUIT    shift, and go to state 1
    CREATE  shift, and go to state 2
    DROP    shift, and go to state 3
    USE     shift, and go to state 4
    SHOW    shift, and go to state 5
    ALTER   shift, and go to state 6
    CLOSE   shift, and go to state 7
    SELECT  shift, and go to state 8
    INSERT  shift, and go to state 9
    DELETE  shift, and go to state 10
    UPDATE  shift, and go to state 11

    $default  reduce using rule 1 (program)

    program    go to state 44
    stmt       go to state 13
    sysStmt    go to state 14
    dbStmt     go to state 15
    tbStmt     go to state 16
    idxStmt    go to state 17
    alterStmt  go to state 18


State 14

    3 stmt: sysStmt . ';'

    ';'  shift, and go to state 45


State 15

    4 stmt: dbStmt . ';'

    ';'  shift, and go to state 46


State 16

    5 stmt: tbStmt . ';'

    ';'  shift, and go to state 47


State 17

    6 stmt: idxStmt . ';'

    ';'  shift, and go to state 48


State 18

    7 stmt: alterStmt . ';'

    ';'  shift, and go to state 49


State 19

   11 dbStmt: CREATE DATABASE . dbName

    IDENTIFIER  shift, and go to state 25

    dbName  go to state 50


State 20

   17 tbStmt: CREATE TABLE . tbName '(' fieldList ',' keyConstraints ')'
   18       | CREATE TABLE . tbName '(' fieldList ')'

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 51


State 21

   54 idxStmt: CREATE INDEX . idxName ON tbName '(' columnList ')'

    IDENTIFIER  shift, and go to state 52

    idxName  go to state 53


State 22

   12 dbStmt: DROP DATABASE . dbName

    IDENTIFIER  shift, and go to state 25

    dbName  go to state 54


State 23

   19 tbStmt: DROP TABLE . tbName

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 55


State 24

   55 idxStmt: DROP INDEX . idxName

    IDENTIFIER  shift, and go to state 52

    idxName  go to state 56


State 25

   78 dbName: IDENTIFIER .

    $default  reduce using rule 78 (dbName)


State 26

   13 dbStmt: USE dbName .

    $default  reduce using rule 13 (dbStmt)


State 27

   16 dbStmt: SHOW TABLES .

    $default  reduce using rule 16 (dbStmt)


State 28

    9 sysStmt: SHOW DATABASES .

    $default  reduce using rule 9 (sysStmt)


State 29

   10 sysStmt: SHOW DATABASE . dbName

    IDENTIFIER  shift, and go to state 25

    dbName  go to state 57


State 30

   15 dbStmt: SHOW TABLE . tbName

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 58


State 31

   56 alterStmt: ALTER TABLE . tbName ADD PRIMARY '(' columnList ')'
   57          | ALTER TABLE . tbName DROP PRIMARY
   58          | ALTER TABLE . tbName ADD CONSTRAINT fkName FOREIGN '(' columnList ')' REFERENCES tbName '(' columnList ')'
   59          | ALTER TABLE . tbName DROP FOREIGN fkName
   60          | ALTER TABLE . tbName ADD columnName field
   61          | ALTER TABLE . tbName DROP columnName
   62          | ALTER TABLE . tbName CHANGE columnName field

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 59


State 32

   79 tbName: IDENTIFIER .
   80 columnName: IDENTIFIER .

    '.'       reduce using rule 79 (tbName)
    $default  reduce using rule 80 (columnName)


State 33

   30 selector: '*' .

    $default  reduce using rule 30 (selector)


State 34

   20 tbStmt: SELECT selector . FROM tableList WHERE whereClause

    FROM  shift, and go to state 60


State 35

   31 selector: cols .
   33 cols: cols . ',' col

    ','  shift, and go to state 61

    $default  reduce using rule 31 (selector)


State 36

   32 cols: col .

    $default  reduce using rule 32 (cols)


State 37

   35 col: tbName . '.' columnName

    '.'  shift, and go to state 62


State 38

   34 col: columnName .

    $default  reduce using rule 34 (col)


State 39

   21 tbStmt: INSERT INTO . tbName VALUES valueLists

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 63


State 40

   22 tbStmt: DELETE FROM . tbName WHERE whereClause

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 64


State 41

   79 tbName: IDENTIFIER .

    $default  reduce using rule 79 (tbName)


State 42

   23 tbStmt: UPDATE tbName . SET setClause

    SET  shift, and go to state 65


State 43

    0 $accept: program $end .

    $default  accept


State 44

    2 program: stmt program .

    $default  reduce using rule 2 (program)


State 45

    3 stmt: sysStmt ';' .

    $default  reduce using rule 3 (stmt)


State 46

    4 stmt: dbStmt ';' .

    $default  reduce using rule 4 (stmt)


State 47

    5 stmt: tbStmt ';' .

    $default  reduce using rule 5 (stmt)


State 48

    6 stmt: idxStmt ';' .

    $default  reduce using rule 6 (stmt)


State 49

    7 stmt: alterStmt ';' .

    $default  reduce using rule 7 (stmt)


State 50

   11 dbStmt: CREATE DATABASE dbName .

    $default  reduce using rule 11 (dbStmt)


State 51

   17 tbStmt: CREATE TABLE tbName . '(' fieldList ',' keyConstraints ')'
   18       | CREATE TABLE tbName . '(' fieldList ')'

    '('  shift, and go to state 66


State 52

   82 idxName: IDENTIFIER .

    $default  reduce using rule 82 (idxName)


State 53

   54 idxStmt: CREATE INDEX idxName . ON tbName '(' columnList ')'

    ON  shift, and go to state 67


State 54

   12 dbStmt: DROP DATABASE dbName .

    $default  reduce using rule 12 (dbStmt)


State 55

   19 tbStmt: DROP TABLE tbName .

    $default  reduce using rule 19 (tbStmt)


State 56

   55 idxStmt: DROP INDEX idxName .

    $default  reduce using rule 55 (idxStmt)


State 57

   10 sysStmt: SHOW DATABASE dbName .

    $default  reduce using rule 10 (sysStmt)


State 58

   15 dbStmt: SHOW TABLE tbName .

    $default  reduce using rule 15 (dbStmt)


State 59

   56 alterStmt: ALTER TABLE tbName . ADD PRIMARY '(' columnList ')'
   57          | ALTER TABLE tbName . DROP PRIMARY
   58          | ALTER TABLE tbName . ADD CONSTRAINT fkName FOREIGN '(' columnList ')' REFERENCES tbName '(' columnList ')'
   59          | ALTER TABLE tbName . DROP FOREIGN fkName
   60          | ALTER TABLE tbName . ADD columnName field
   61          | ALTER TABLE tbName . DROP columnName
   62          | ALTER TABLE tbName . CHANGE columnName field

    DROP    shift, and go to state 68
    ADD     shift, and go to state 69
    CHANGE  shift, and go to state 70


State 60

   20 tbStmt: SELECT selector FROM . tableList WHERE whereClause

    IDENTIFIER  shift, and go to state 41

    tableList  go to state 71
    tbName     go to state 72


State 61

   33 cols: cols ',' . col

    IDENTIFIER  shift, and go to state 32

    col         go to state 73
    tbName      go to state 37
    columnName  go to state 38


State 62

   35 col: tbName '.' . columnName

    IDENTIFIER  shift, and go to state 74

    columnName  go to state 75


State 63

   21 tbStmt: INSERT INTO tbName . VALUES valueLists

    VALUES  shift, and go to state 76


State 64

   22 tbStmt: DELETE FROM tbName . WHERE whereClause

    WHERE  shift, and go to state 77


State 65

   23 tbStmt: UPDATE tbName SET . setClause

    IDENTIFIER  shift, and go to state 74

    setClause   go to state 78
    columnName  go to state 79


State 66

   17 tbStmt: CREATE TABLE tbName '(' . fieldList ',' keyConstraints ')'
   18       | CREATE TABLE tbName '(' . fieldList ')'

    IDENTIFIER  shift, and go to state 74

    fieldList   go to state 80
    field       go to state 81
    columnName  go to state 82


State 67

   54 idxStmt: CREATE INDEX idxName ON . tbName '(' columnList ')'

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 83


State 68

   57 alterStmt: ALTER TABLE tbName DROP . PRIMARY
   59          | ALTER TABLE tbName DROP . FOREIGN fkName
   61          | ALTER TABLE tbName DROP . columnName

    PRIMARY     shift, and go to state 84
    FOREIGN     shift, and go to state 85
    IDENTIFIER  shift, and go to state 74

    columnName  go to state 86


State 69

   56 alterStmt: ALTER TABLE tbName ADD . PRIMARY '(' columnList ')'
   58          | ALTER TABLE tbName ADD . CONSTRAINT fkName FOREIGN '(' columnList ')' REFERENCES tbName '(' columnList ')'
   60          | ALTER TABLE tbName ADD . columnName field

    CONSTRAINT  shift, and go to state 87
    PRIMARY     shift, and go to state 88
    IDENTIFIER  shift, and go to state 74

    columnName  go to state 89


State 70

   62 alterStmt: ALTER TABLE tbName CHANGE . columnName field

    IDENTIFIER  shift, and go to state 74

    columnName  go to state 90


State 71

   20 tbStmt: SELECT selector FROM tableList . WHERE whereClause
   37 tableList: tableList . ',' tbName

    WHERE  shift, and go to state 91
    ','    shift, and go to state 92


State 72

   36 tableList: tbName .

    $default  reduce using rule 36 (tableList)


State 73

   33 cols: cols ',' col .

    $default  reduce using rule 33 (cols)


State 74

   80 columnName: IDENTIFIER .

    $default  reduce using rule 80 (columnName)


State 75

   35 col: tbName '.' columnName .

    $default  reduce using rule 35 (col)


State 76

   21 tbStmt: INSERT INTO tbName VALUES . valueLists

    '('  shift, and go to state 93

    valueLists  go to state 94


State 77

   22 tbStmt: DELETE FROM tbName WHERE . whereClause

    IDENTIFIER  shift, and go to state 32

    col          go to state 95
    whereClause  go to state 96
    tbName       go to state 37
    columnName   go to state 38


State 78

   23 tbStmt: UPDATE tbName SET setClause .
   25 setClause: setClause . ',' columnName '=' value

    ','  shift, and go to state 97

    $default  reduce using rule 23 (tbStmt)


State 79

   24 setClause: columnName . '=' value

    '='  shift, and go to state 98


State 80

   17 tbStmt: CREATE TABLE tbName '(' fieldList . ',' keyConstraints ')'
   18       | CREATE TABLE tbName '(' fieldList . ')'
   64 fieldList: fieldList . ',' field

    ','  shift, and go to state 99
    ')'  shift, and go to state 100


State 81

   63 fieldList: field .

    $default  reduce using rule 63 (fieldList)


State 82

   65 field: columnName . type
   66      | columnName . type NOTNULL
   67      | columnName . type DEFAULT value
   68      | columnName . type NOTNULL DEFAULT value

    T_INT    shift, and go to state 101
    T_FLOAT  shift, and go to state 102
    VARCHAR  shift, and go to state 103

    type  go to state 104


State 83

   54 idxStmt: CREATE INDEX idxName ON tbName . '(' columnList ')'

    '('  shift, and go to state 105


State 84

   57 alterStmt: ALTER TABLE tbName DROP PRIMARY .

    $default  reduce using rule 57 (alterStmt)


State 85

   59 alterStmt: ALTER TABLE tbName DROP FOREIGN . fkName

    IDENTIFIER  shift, and go to state 106

    fkName  go to state 107


State 86

   61 alterStmt: ALTER TABLE tbName DROP columnName .

    $default  reduce using rule 61 (alterStmt)


State 87

   58 alterStmt: ALTER TABLE tbName ADD CONSTRAINT . fkName FOREIGN '(' columnList ')' REFERENCES tbName '(' columnList ')'

    IDENTIFIER  shift, and go to state 106

    fkName  go to state 108


State 88

   56 alterStmt: ALTER TABLE tbName ADD PRIMARY . '(' columnList ')'

    '('  shift, and go to state 109


State 89

   60 alterStmt: ALTER TABLE tbName ADD columnName . field

    IDENTIFIER  shift, and go to state 74

    field       go to state 110
    columnName  go to state 82


State 90

   62 alterStmt: ALTER TABLE tbName CHANGE columnName . field

    IDENTIFIER  shift, and go to state 74

    field       go to state 111
    columnName  go to state 82


State 91

   20 tbStmt: SELECT selector FROM tableList WHERE . whereClause

    IDENTIFIER  shift, and go to state 32

    col          go to state 95
    whereClause  go to state 112
    tbName       go to state 37
    columnName   go to state 38


State 92

   37 tableList: tableList ',' . tbName

    IDENTIFIER  shift, and go to state 41

    tbName  go to state 113


State 93

   26 valueLists: '(' . valueList ')'

    VALUE_INT     shift, and go to state 114
    VALUE_FLOAT   shift, and go to state 115
    VALUE_STRING  shift, and go to state 116
    VALUE_NULL    shift, and go to state 117

    valueList  go to state 118
    value      go to state 119


State 94

   21 tbStmt: INSERT INTO tbName VALUES valueLists .
   27 valueLists: valueLists . ',' '(' valueList ')'

    ','  shift, and go to state 120

    $default  reduce using rule 21 (tbStmt)


State 95

   38 whereClause: col . op expr
   39            | col . IS VALUE_NULL
   40            | col . IS NOT VALUE_NULL

    IS      shift, and go to state 121
    LEX_GE  shift, and go to state 122
    LEX_LE  shift, and go to state 123
    LEX_NE  shift, and go to state 124
    '='     shift, and go to state 125
    '>'     shift, and go to state 126
    '<'     shift, and go to state 127

    op  go to state 128


State 96

   22 tbStmt: DELETE FROM tbName WHERE whereClause .
   41 whereClause: whereClause . AND whereClause

    AND  shift, and go to state 129

    $default  reduce using rule 22 (tbStmt)


State 97

   25 setClause: setClause ',' . columnName '=' value

    IDENTIFIER  shift, and go to state 74

    columnName  go to state 130


State 98

   24 setClause: columnName '=' . value

    VALUE_INT     shift, and go to state 114
    VALUE_FLOAT   shift, and go to state 115
    VALUE_STRING  shift, and go to state 116
    VALUE_NULL    shift, and go to state 117

    value  go to state 131


State 99

   17 tbStmt: CREATE TABLE tbName '(' fieldList ',' . keyConstraints ')'
   64 fieldList: fieldList ',' . field

    PRIMARY     shift, and go to state 132
    FOREIGN     shift, and go to state 133
    IDENTIFIER  shift, and go to state 74

    keyConstraints  go to state 134
    keyConstrint    go to state 135
    field           go to state 136
    columnName      go to state 82


State 100

   18 tbStmt: CREATE TABLE tbName '(' fieldList ')' .

    $default  reduce using rule 18 (tbStmt)


State 101

   69 type: T_INT .

    $default  reduce using rule 69 (type)


State 102

   71 type: T_FLOAT .

    $default  reduce using rule 71 (type)


State 103

   70 type: VARCHAR . '(' VALUE_INT ')'

    '('  shift, and go to state 137


State 104

   65 field: columnName type .
   66      | columnName type . NOTNULL
   67      | columnName type . DEFAULT value
   68      | columnName type . NOTNULL DEFAULT value

    NOTNULL  shift, and go to state 138
    DEFAULT  shift, and go to state 139

    $default  reduce using rule 65 (field)


State 105

   54 idxStmt: CREATE INDEX idxName ON tbName '(' . columnList ')'

    IDENTIFIER  shift, and go to state 74

    columnList  go to state 140
    columnName  go to state 141


State 106

   81 fkName: IDENTIFIER .

    $default  reduce using rule 81 (fkName)


State 107

   59 alterStmt: ALTER TABLE tbName DROP FOREIGN fkName .

    $default  reduce using rule 59 (alterStmt)


State 108

   58 alterStmt: ALTER TABLE tbName ADD CONSTRAINT fkName . FOREIGN '(' columnList ')' REFERENCES tbName '(' columnList ')'

    FOREIGN  shift, and go to state 142


State 109

   56 alterStmt: ALTER TABLE tbName ADD PRIMARY '(' . columnList ')'

    IDENTIFIER  shift, and go to state 74

    columnList  go to state 143
    columnName  go to state 141


State 110

   60 alterStmt: ALTER TABLE tbName ADD columnName field .

    $default  reduce using rule 60 (alterStmt)


State 111

   62 alterStmt: ALTER TABLE tbName CHANGE columnName field .

    $default  reduce using rule 62 (alterStmt)


State 112

   20 tbStmt: SELECT selector FROM tableList WHERE whereClause .
   41 whereClause: whereClause . AND whereClause

    AND  shift, and go to state 129

    $default  reduce using rule 20 (tbStmt)


State 113

   37 tableList: tableList ',' tbName .

    $default  reduce using rule 37 (tableList)


State 114

   72 value: VALUE_INT .

    $default  reduce using rule 72 (value)


State 115

   74 value: VALUE_FLOAT .

    $default  reduce using rule 74 (value)


State 116

   73 value: VALUE_STRING .

    $default  reduce using rule 73 (value)


State 117

   75 value: VALUE_NULL .

    $default  reduce using rule 75 (value)


State 118

   26 valueLists: '(' valueList . ')'
   29 valueList: valueList . ',' value

    ','  shift, and go to state 144
    ')'  shift, and go to state 145


State 119

   28 valueList: value .

    $default  reduce using rule 28 (valueList)


State 120

   27 valueLists: valueLists ',' . '(' valueList ')'

    '('  shift, and go to state 146


State 121

   39 whereClause: col IS . VALUE_NULL
   40            | col IS . NOT VALUE_NULL

    NOT         shift, and go to state 147
    VALUE_NULL  shift, and go to state 148


State 122

   43 op: LEX_GE .

    $default  reduce using rule 43 (op)


State 123

   44 op: LEX_LE .

    $default  reduce using rule 44 (op)


State 124

   45 op: LEX_NE .

    $default  reduce using rule 45 (op)


State 125

   42 op: '=' .

    $default  reduce using rule 42 (op)


State 126

   46 op: '>' .

    $default  reduce using rule 46 (op)


State 127

   47 op: '<' .

    $default  reduce using rule 47 (op)


State 128

   38 whereClause: col op . expr

    VALUE_INT     shift, and go to state 114
    VALUE_FLOAT   shift, and go to state 115
    VALUE_STRING  shift, and go to state 116
    IDENTIFIER    shift, and go to state 32
    VALUE_NULL    shift, and go to state 117

    col         go to state 149
    expr        go to state 150
    value       go to state 151
    tbName      go to state 37
    columnName  go to state 38


State 129

   41 whereClause: whereClause AND . whereClause

    IDENTIFIER  shift, and go to state 32

    col          go to state 95
    whereClause  go to state 152
    tbName       go to state 37
    columnName   go to state 38


State 130

   25 setClause: setClause ',' columnName . '=' value

    '='  shift, and go to state 153


State 131

   24 setClause: columnName '=' value .

    $default  reduce using rule 24 (setClause)


State 132

   52 keyConstrint: PRIMARY . '(' columnList ')'

    '('  shift, and go to state 154


State 133

   53 keyConstrint: FOREIGN . fkName '(' columnList ')' REFERENCES tbName '(' columnList ')'

    IDENTIFIER  shift, and go to state 106

    fkName  go to state 155


State 134

   17 tbStmt: CREATE TABLE tbName '(' fieldList ',' keyConstraints . ')'
   51 keyConstraints: keyConstraints . ',' keyConstrint

    ','  shift, and go to state 156
    ')'  shift, and go to state 157


State 135

   50 keyConstraints: keyConstrint .

    $default  reduce using rule 50 (keyConstraints)


State 136

   64 fieldList: fieldList ',' field .

    $default  reduce using rule 64 (fieldList)


State 137

   70 type: VARCHAR '(' . VALUE_INT ')'

    VALUE_INT  shift, and go to state 158


State 138

   66 field: columnName type NOTNULL .
   68      | columnName type NOTNULL . DEFAULT value

    DEFAULT  shift, and go to state 159

    $default  reduce using rule 66 (field)


State 139

   67 field: columnName type DEFAULT . value

    VALUE_INT     shift, and go to state 114
    VALUE_FLOAT   shift, and go to state 115
    VALUE_STRING  shift, and go to state 116
    VALUE_NULL    shift, and go to state 117

    value  go to state 160


State 140

   54 idxStmt: CREATE INDEX idxName ON tbName '(' columnList . ')'
   77 columnList: columnList . ',' columnName

    ','  shift, and go to state 161
    ')'  shift, and go to state 162


State 141

   76 columnList: columnName .

    $default  reduce using rule 76 (columnList)


State 142

   58 alterStmt: ALTER TABLE tbName ADD CONSTRAINT fkName FOREIGN . '(' columnList ')' REFERENCES tbName '(' columnList ')'

    '('  shift, and go to state 163


State 143

   56 alterStmt: ALTER TABLE tbName ADD PRIMARY '(' columnList . ')'
   77 columnList: columnList . ',' columnName

    ','  shift, and go to state 161
    ')'  shift, and go to state 164


State 144

   29 valueList: valueList ',' . value

    VALUE_INT     shift, and go to state 114
    VALUE_FLOAT   shift, and go to state 115
    VALUE_STRING  shift, and go to state 116
    VALUE_NULL    shift, and go to state 117

    value  go to state 165


State 145

   26 valueLists: '(' valueList ')' .

    $default  reduce using rule 26 (valueLists)


State 146

   27 valueLists: valueLists ',' '(' . valueList ')'

    VALUE_INT     shift, and go to state 114
    VALUE_FLOAT   shift, and go to state 115
    VALUE_STRING  shift, and go to state 116
    VALUE_NULL    shift, and go to state 117

    valueList  go to state 166
    value      go to state 119


State 147

   40 whereClause: col IS NOT . VALUE_NULL

    VALUE_NULL  shift, and go to state 167


State 148

   39 whereClause: col IS VALUE_NULL .

    $default  reduce using rule 39 (whereClause)


State 149

   48 expr: col .

    $default  reduce using rule 48 (expr)


State 150

   38 whereClause: col op expr .

    $default  reduce using rule 38 (whereClause)


State 151

   49 expr: value .

    $default  reduce using rule 49 (expr)


State 152

   41 whereClause: whereClause . AND whereClause
   41            | whereClause AND whereClause .

    AND  shift, and go to state 129

    AND       [reduce using rule 41 (whereClause)]
    $default  reduce using rule 41 (whereClause)


State 153

   25 setClause: setClause ',' columnName '=' . value

    VALUE_INT     shift, and go to state 114
    VALUE_FLOAT   shift, and go to state 115
    VALUE_STRING  shift, and go to state 116
    VALUE_NULL    shift, and go to state 117

    value  go to state 168


State 154

   52 keyConstrint: PRIMARY '(' . columnList ')'

    IDENTIFIER  shift, and go to state 74

    columnList  go to state 169
    columnName  go to state 141


State 155

   53 keyConstrint: FOREIGN fkName . '(' columnList ')' REFERENCES tbName '(' columnList ')'

    '('  shift, and go to state 170


State 156

   51 keyConstraints: keyConstraints ',' . keyConstrint

    PRIMARY  shift, and go to state 132
    FOREIGN  shift, and go to state 133

    keyConstrint  go to state 171


State 157

   17 tbStmt: CREATE TABLE tbName '(' fieldList ',' keyConstraints ')' .

    $default  reduce using rule 17 (tbStmt)


State 158

   70 type: VARCHAR '(' VALUE_INT . ')'

    ')'  shift, and go to state 172


State 159

   68 field: columnName type NOTNULL DEFAULT . value
